--- a/mystyle.css
+++ b/mystyle.css
@@ -1,14 +1,21 @@
-.bi-patch-minus{
-    font-size: 25px;
-}
-
-.bi-patch-plus{
-    font-size: 25px;
-    
-}
+/* .bi-patch-minus{ */
+    /* font-size: 25px; */
+/* } */
+/*  */
+/* .bi-patch-plus{ */
+    /* font-size: 25px; */
+    /*  */
+/* } */
 
 
 /* KART GIZLEMEK ICIN */
 
 .card { margin-bottom: 20px; }
 .d-none { display: none; }
+
+* {
+    font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
